--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,16 @@
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".DiaryList"
+            android:name=".DiaryListActivity"
             android:label="@string/title_activity_diary_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ResultActivity"
+            android:label="@string/title_activity_result"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AboutNEActivity"
+            android:label="@string/title_activity_about_ne"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
